<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list_menu"
        android:title="@string/list_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_group"
        android:icon="@drawable/ic_filter_menu"
        android:title="@string/filter_text"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/wheel_action"
                android:checkable="true"
                android:icon="@drawable/ic_wheel_menu"
                android:title="@string/wheel_menu_text" />
            <item
                android:id="@+id/wash_action"
                android:checkable="true"
                android:icon="@drawable/ic_wash_menu"
                android:title="@string/wash_menu_text" />
            <item
                android:id="@+id/service_action"
                android:checkable="true"
                android:icon="@drawable/ic_service_menu"
                android:title="@string/service_menu_text" />
        </menu>
    </item>
</menu>