<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fill"
    tools:context=".profile.ProfileEditActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription"
        tools:src="@drawable/avatar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_change_avatar">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_private"
            style="@style/Profile_Edit_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/profile_edit_title_private"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_private_name"
            style="@style/Profile_Edit_Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_subtitle_name"
            app:layout_constraintTop_toBottomOf="@id/tv_title_private" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_private_name"
            tools:text="Павлов Константин" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_contact"
            style="@style/Profile_Edit_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/profile_edit_title_contact"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_contact_email"
            style="@style/Profile_Edit_Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_subtitle_email"
            app:layout_constraintTop_toBottomOf="@id/tv_title_contact" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_contact_email"
            tools:text="konstantink@yandex.ru" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_contact_phone"
            style="@style/Profile_Edit_Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit_subtitle_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_contact_phone"
            tools:text="+7 917 123 45 67" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Toolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_change_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/profile_edit_change_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

</androidx.constraintlayout.widget.ConstraintLayout>