<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        tools:context=".registration.RegistrationActivity">

        <com.synergy.android.util.ui.GradientTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration_text"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_name_l"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="18sp"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name_l"
            style="@style/AuthScreen_TextInputLayout"
            android:hint="@string/name_hint"
            app:layout_constraintBottom_toTopOf="@id/et_surname_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.synergy.android.util.ui.CheckableTextInputEditText
                android:id="@+id/et_name"
                style="@style/AuthScreen_TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_surname_l"
            style="@style/AuthScreen_TextInputLayout"
            android:hint="@string/surname_hint"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.synergy.android.util.ui.CheckableTextInputEditText
                android:id="@+id/et_surname"
                style="@style/AuthScreen_TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone_l"
            style="@style/AuthScreen_TextInputLayout"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_surname_l">

            <com.synergy.android.util.ui.CheckableTextInputEditText
                android:id="@+id/et_phone"
                style="@style/AuthScreen_TextInputEditText"
                android:imeOptions="actionNext"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_l"
            style="@style/AuthScreen_TextInputLayout"
            android:hint="@string/add_password_hint"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone_l">

            <com.synergy.android.util.ui.CheckableTextInputEditText
                android:id="@+id/et_password"
                style="@style/AuthScreen_TextInputEditText"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.synergy.android.util.ui.GradientMaterialButton
            android:id="@+id/bt_signup"
            style="@style/Gradient_Button"
            android:text="@string/signup_button"
            app:layout_constraintBottom_toTopOf="@id/bt_signin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_l" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_signin"
            style="@style/SimpleRed_MaterialButton"
            android:gravity="center"
            android:text="@string/signin_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_signup" />

        <ProgressBar
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>